# KalumeProfesor

./: README.md  manage.py  pyproject.toml
kalumeprofesor/: asgi.py  settings.py  urls.py  wsgi.py
