[tool.poetry]
name = "kalumeprofesor"
version = "0.1.0"
description = ""
authors = ["Kalume <abrahammoracejas@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
